--- a/src/navbar/navbar.module.css
+++ b/src/navbar/navbar.module.css
@@ -40,7 +40,7 @@
     position: absolute;
     right: 0; /* aligns the dropdown to the right of the button */
     background-color: #f1f1f1;
-    min-width: 160px;
+    /* min-width: 160px; */
     z-index: 1;
     padding: 0.4rem;
     border-radius: 8px;
