--- a/src/navbar/navbar.module.css
+++ b/src/navbar/navbar.module.css
@@ -1,6 +1,6 @@
 .navbar {
     background-color: #007bff;
-    padding: 10px;
+    padding: 0.5rem 1rem;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -9,16 +9,29 @@
 .navbar ul {
     list-style: none;
     display: flex;
-    gap: 15px;
+    padding: 0;
+    margin: 0.5rem;
 }
 
-.navbar ul li {
+.navitem{
+    margin: 0 0.5rem;
+}
+
+.navitem:hover {
     color: #fff;
+    cursor: pointer;
+    text-shadow: #ff3 0px 0px 10px;
 }
 
-.navbar ul li a {
+.navitem:active {
+    transform: scale(0.9);
+}
+
+.navlink {
     color: #fff;
     text-decoration: none;
+    padding: 0;
+    margin: 0;
 }
 
 .navbar button {
@@ -28,6 +41,12 @@
     padding: 10px 15px;
     border-radius: 4px;
     cursor: pointer;
+}
+.navbar button:hover {
+    color: #000;
+}
+.navbar button:active {
+    transform: scale(0.9);
 }
 
 .dropdown {
