--- a/src/chatter.module.css
+++ b/src/chatter.module.css
@@ -51,6 +51,16 @@ h1 {
     justify-content: space-between;
 }
 
+.info-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+.category {
+    color: #666;
+    margin: 0 2rem;
+}
+
 @media (min-width: 768px) {
     .post-container {
         flex-direction: row;
